<resources>
    <string name="app_name">Расписание</string>
    <string name="toolbar_add_items">Предметы</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="title_activity_list_teacher">ListTeacherActivity</string>

    <string name="tab_item_mon">ПН</string>
    <string name="tab_item_tues">ВТ</string>
    <string name="tab_item_wed">СР</string>
    <string name="tab_item_thurs">ЧТ</string>
    <string name="tab_item_fri">ПТ</string>
    <string name="tab_item_sat">СБ</string>

    <string name="del_dialog_message">Удалить элемент(ы)?</string>
    <string name="del_dialog_remove">Удалить</string>
    <string name="del_dialog_cancel">Отмена</string>

    <string name="add_class_dialog_title">Введите номер аудитории</string>
    <string name="add_class_dialog_add">Добавить</string>
    <string name="add_class_dialog_cancel">Отмена</string>

    <string name="nav_btn_item">Предметы</string>
    <string name="nav_btn_teacher">Преподаватели</string>
    <string name="nav_btn_schedule">Расписание</string>
    <string name="nav_homework">Задания</string>
</resources>
