<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_class_dialog_title"
        android:textColor="#000"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/et_add_class_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginBottom="20dp"
        android:theme="@style/ThemeEditText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_add_class_dialog_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_class_dialog_add"
            android:layout_weight="1"
            android:background="@drawable/border_corner_view"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn_add_class_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_class_dialog_cancel"
            android:layout_weight="1"
            android:background="@drawable/border_corner_view"
            android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>